--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
       "azure-storage": "~2.6.0",
-      "uuid": "~3.1.0"
+      "uuid": "~3.1.0",
+      "bluebird": "~3.5.1",
+      "readline-sync": "~1.4.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
